--- a/index.html
+++ b/index.html
@@ -5,75 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Hangman Game</title>
 </head>
 
 <body>
     <div class="game-modal">
         <div class="content">
-           <img src="images/crying-emoji.gif" alt="gif">
-           <h4>Game Over!</h4>
-           <p>The correct word was: <b>rainbow</b></p>
+           <img src="images/lost.gif" alt="gif">
+           <h4></h4>
+           <p><b></b></p>
            <button class="play-again">Play Again</button>
         </div>
     </div>
 
     <div class="container">
         <div class="hangman-box">
-            <img src="images/hang1.png" alt="hang-img" srcset="">
+            <img src="images/hang0.png" alt="hang-img" srcset="">
             <h1>Hangman Game</h1>
         </div>
         <div class="game-box">
             <ul class="word-display">
-                <li class="letter"></li>
-                <li class="letter"></li>
-                <li class="letter guessed">a</li>
-                <li class="letter"></li>
-                <li class="letter"></li>
-                <li class="letter"></li>
-                <li class="letter"></li>
             </ul>
             <h4 class="hint-text">
                 Hint:
-                <b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa amet dolor ipsa maxime vel molestiae
-                    veritatis, sint inventore possimus optio.</b>
+                <b></b>
             </h4>
             <h4 class="guesses-text">
                 Incorrect Guesses:
-                <b>0 / 6</b>
+                <b></b>
             </h4>
             <div class="keyboard">
-                <button>a</button>
-                <button>b</button>
-                <button>c</button>
-                <button>d</button>
-                <button>e</button>
-                <button>f</button>
-                <button>g</button>
-                <button>h</button>
-                <button>i</button>
-                <button>j</button>
-                <button>k</button>
-                <button>l</button>
-                <button>m</button>
-                <button>n</button>
-                <button>o</button>
-                <button>p</button>
-                <button>q</button>
-                <button>r</button>
-                <button>s</button>
-                <button>t</button>
-                <button>u</button>
-                <button>v</button>
-                <button>w</button>
-                <button>x</button>
-                <button>y</button>
-                <button>z</button>
+               
             </div>
         </div>
 
     </div>
-    <script src="index.js"></script>
+    <script src="random.js" defer></script>
+    <script src="index.js" defer></script>
 </body>
 
 </html>
